# SlicerMarkupsToModel

./: CMakeLists.txt  CTestConfig.cmake  MarkupsToModel.xcf  README.md
MarkupsToModel/: CMakeLists.txt  qSlicerMarkupsToModelModule.cxx  qSlicerMarkupsToModelModule.h  qSlicerMarkupsToModelModuleWidget.cxx  qSlicerMarkupsToModelModuleWidget.h
MarkupsToModel/Logic/: CMakeLists.txt  CreateClosedSurfaceUtil.cxx  CreateClosedSurfaceUtil.h  CreateCurveUtil.cxx  CreateCurveUtil.h  vtkCreateClosedSurfaceUtil.cxx  vtkCreateClosedSurfaceUtil.h  vtkCreateCurveUtil.cxx  vtkCreateCurveUtil.h  vtkCreateModelUtil.cxx  vtkCreateModelUtil.h  vtkCurveGenerator.cxx  vtkCurveGenerator.h  vtkLinearSpline.cxx  vtkLinearSpline.h  vtkParametricPolynomialApproximation.cxx  vtkParametricPolynomialApproximation.h  vtkSlicerMarkupsToModelClosedSurfaceGeneration.cxx  vtkSlicerMarkupsToModelClosedSurfaceGeneration.h  vtkSlicerMarkupsToModelCurveGeneration.cxx  vtkSlicerMarkupsToModelCurveGeneration.h  vtkSlicerMarkupsToModelLogic.cxx  vtkSlicerMarkupsToModelLogic.h
MarkupsToModel/MRML/: vtkMRMLMarkupsToModelNode.cxx  vtkMRMLMarkupsToModelNode.h
MarkupsToModel/Resources/UI/: qSlicerMarkupsToModelModuleWidget.ui
